--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <script src="js/jquery-3.5.1 .js"></script>
     <script src="js/scripts.js"></script>
-    <title>Pizza hub</title>
+    <title>Elite Pizza hub</title>
 </head>
 <body>
     <h1> Elite Pizza hub</h1>
