--- a/index.html
+++ b/index.html
@@ -3,13 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Elite Pizza hub</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <script src="js/jquery-3.5.1 .js"></script>
     <script src="js/scripts.js"></script>
-    <title>Elite Pizza hub</title>
 </head>
 <body>
-    <h1> Elite Pizza hub</h1>
+    <div class="container-fluid">
+            <div class="row">
+                <div class="col">
+                    <h1> Elite Pizza hub</h1>
+                </div>
+            </div>
+        </div>
+        
+    </div>
 </body>
 </html>
