Added classes and columns for the pizza images and specifications

--- a/index.html
+++ b/index.html
@@ -11,13 +11,27 @@
 </head>
 <body>
     <div class="container-fluid">
-            <div class="row">
-                <div class="col">
+            <div class="header"> 
                     <h1> Elite Pizza hub</h1>
                 </div>
             </div>
         </div>
-        
+        <div class="piz">
+        <div class="row">
+            <div class="col">
+                <h2>Chicken Ticker</h2>
+                <img src="images/Delicious.jpg" alt="image">
+            </div>
+            <div class="col">
+                <h2>Pepperino</h2>
+                <img src="images/Dominos-Pizza.jpg" alt="">
+            </div>
+            <div class="col">
+                <h2>Topping</h2>
+                <img src="/images/pizza-3303388_960_720.jpg" alt="">
+            </div>
+        </div>
+          </div>
     </div>
 </body>
 </html>
