Modified the classes od the html part

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
         <div class="piz">
         <div class="row">
             <div class="col">
-                <h2>Chicken Ticker</h2>
+                <h2>Crust</h2>
                 <img src="images/Delicious.jpg" alt="image">
             </div>
             <div class="col">
-                <h2>Pepperino</h2>
+                <h2>Topping</h2>
                 <img src="images/Dominos-Pizza.jpg" alt="">
             </div>
             <div class="col">
-                <h2>Topping</h2>
+                <h2>Sizes</h2>
                 <img src="/images/pizza-3303388_960_720.jpg" alt="">
             </div>
         </div>
