Added the button section so that after inputing the requirements you just need to add those items by clicking on the button add

--- a/index.html
+++ b/index.html
@@ -73,6 +73,17 @@
             <option value="1000">Pineapple= ksh 1000</option>
         </select>
         </div>
+        <div class="col-md-3">
+            <label>QUANTITY</label>
+            <input class="form-control" type="text" name="pizza" id="quantity" placeholder="0" max="" min="0">
+        </div>
     </div>
+    <div class="btn">
+<button class="btn btn-success mx-auto d-block submit" type="button" id="add"><strong>ADD</strong>
+</button>
+</div>
+</div>
+</div>
+</form><br>
 </body>
 </html>
