Added the footer section and the copy right

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                   </div>
             </div> <br>
             <div class="col">
-                <img src="images/Dominos-Pizza.jpg" alt="">
+                <img src="images/debonairs-pizza-780x780.jpg" alt="">
                 <div class="overlay">
                     <div class="text">SIZE</div>
                   </div>
@@ -40,6 +40,7 @@
             </div>
         </div> 
     </div>
+<section>
     <form class="form">
         <div id="for">
             <div class="container">
@@ -52,7 +53,8 @@
             <option value="1000">Medium =ksh 1000</option>
             <option value="500">Small= ksh 500</option>
         </select>
-            </div>
+     </div>
+
         <div class="col-md-3">
         <label>CRUST</label>
         <select class="browser-default custom-select" id="crusts">
@@ -61,7 +63,7 @@
             <option value="1000">Stuffed =ksh 1000</option>
             <option value="500">Gluten free= ksh 500</option>
         </select>
-                </div>
+     </div>
         <div class="col-md-3">
         <label>TOPPINGS</label>
         <select class="browser-default custom-select" id="toppings">
@@ -85,5 +87,9 @@
 </div>
 </div>
 </form><br>
+</section>
+<div class="footer">
+    <h2>copyright2020</h2>
+</div>
 </body>
 </html>
