Added copyright section and also marquee so that text could slide above the displaY

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             </div>
         </div>
         <div class="piz">
+            <marquee direction="horizantal" height="100" width="100%" bgcolor="white"><h2><strong>Get a Pizza of your choice!</strong></h2></marquee>
         <div class="row">
             <div class="col">
                 <img src="images/Delicious.jpg" alt="image">
@@ -89,7 +90,8 @@
 </form><br>
 </section>
 <div class="footer">
-    <h2>copyright2020</h2>
+    <h2>copyright@2020</h2>
 </div>
+<script src="js/scripts.js"></script>
 </body>
 </html>
