Added the label and check box so that when the user need the delivery he/she will check it and so they will proceed to the next level to pay

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
     <input type="checkbox" id="check">
     <label for="check">
         Do you want it to be delivered?                
-    </label>
-    <input type="text" id="mess">
+    </label><br>
+    <input type="text" placeholder="Add email address and location" id="mess">
 
 </div>
 <button class="btn btn-success mx-auto d-block submit" type="button" id="checkout"><strong>Checkout</strong>
