changed the source of the image from absolute path to local path

--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
             <marquee direction="horizantal" height="100" width="100%"><h2><strong>Get a Pizza of your choice!</strong></h2></marquee>
         <div class="row">
             <div class="col">
-                <img src="images/Delicious.jpg" alt="image">
+                <img src="../images/Delicious.jpg" alt="image">
                 <div class="overlay">
                     <div class="text">CRUST</div>
                   </div>
             </div> <br>
             <div class="col">
-                <img src="images/debonairs-pizza-780x780.jpg" alt="">
+                <img src="../images/debonairs-pizza-780x780.jpg" alt="">
                 <div class="overlay">
                     <div class="text">SIZE</div>
                   </div>
             </div>
             <div class="col-6 col-md-4">
-                <img src="/images/pizza-3303388_960_720.jpg" alt="">
+                <img src="../images/pizza-3303388_960_720.jpg" alt="">
                 <div class="overlay">
                     <div class="text">TOPPING</div>
                   </div>
