Changed the image

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                   </div>
             </div>
             <div class="col-6 col-md-4">
-                <img src="../images/pizza-3303388_960_720.jpg" alt="">
+                <img src="./images/topping.jpeg" alt="">
                 <div class="overlay">
                     <div class="text">TOPPING</div>
                   </div>
