changed the absolute path for the image from the local path

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
             <marquee direction="horizantal" height="100" width="100%"><h2><strong>Get a Pizza of your choice!</strong></h2></marquee>
         <div class="row">
             <div class="col">
-                <img src="../images/Delicious.jpg" alt="image">
+                <img src="./images/Delicious.jpg" alt="image">
                 <div class="overlay">
                     <div class="text">CRUST</div>
                   </div>
             </div> <br>
             <div class="col">
-                <img src="../images/debonairs-pizza-780x780.jpg" alt="">
+                <img src="./images/debonairs-pizza-780x780.jpg" alt="">
                 <div class="overlay">
                     <div class="text">SIZE</div>
                   </div>
