Changed image for html web

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                   </div>
             </div> <br>
             <div class="col">
-                <img src="./images/debonairs-pizza-780x780.jpg" alt="">
+                <img src="./images/Pizzain.png" alt="">
                 <div class="overlay">
                     <div class="text">SIZE</div>
                   </div>
