Image changed to appear clear on the image sizes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                   </div>
             </div> <br>
             <div class="col">
-                <img src="./images/Pizzain.png" alt="">
+                <img src="./images/2bc85a1f-aaae-4c49-8e13-67b7bc49c9e5.jpeg" alt="">
                 <div class="overlay">
                     <div class="text">SIZE</div>
                   </div>
